# goobernatorial

./: .gitignore  README.md  example_window.py  meson.build  particle.ink  pyproject.toml
include/: Color.hpp  Events.hpp  InkSprites.hpp  Rect.hpp  Renderer.hpp  Texture.hpp  Time.hpp  Transform.hpp  Vec2.hpp  Window.hpp
include/ink/: AST.hpp  Interpreter.hpp  Lexer.hpp  Parser.hpp  Token.hpp
src/: events.cpp  goob_ext.cpp  ink_sprites.cpp  renderer.cpp  texture.cpp  time.cpp  window.cpp
src/ink/: Interpreter.cpp  Lexer.cpp  Parser.cpp
